tests/NormalTests/paczka1/fuzzy1/89243700.err
Error in line 10: zJq7UCbtqPV A326 71,1
Error in line 25: aaRnmTJ A584 13,55
Error in line 24: aaRnmTJ A440 24,8
